screen to start the quiz #18

--- a/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
+++ b/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
@@ -8,7 +8,12 @@
     <br>
     <label for="theme">
       Theme <br>
-      <input class="input-custom" type="text" id="theme" [formControlName]="'theme'">
+      <!--input class="input-custom" type="text" id="theme" [formControlName]="'theme'"-->
+      <select name="Theme" id="theme_selector">
+        <option *ngFor="let currentTheme of THEME_LIST" [value]="currentTheme">
+          {{currentTheme}}
+        </option>
+      </select>
     </label>
     <br>
     <button type="submit" class="button-card" (click)="addQuiz()">Create</button>
