--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
@@ -1,5 +1,5 @@
 <button id="back-button "class="button-card" routerLink="/quiz-list">Retour</button>
 
 <h2 id="quiz-name">{{quiz.name}}</h2>
-
+<img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="floppa">
 <button id="start-quiz-button" class="button-card" routerLink="/quiz-list">Démarrer le quiz</button>
