implementation back button #18

--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
@@ -1,4 +1,4 @@
-<button id="back-button "class="button-card" routerLink="/quiz-list">Retour</button>
+<button id="back-button" class="button-card" (click)="goBack()">Retour</button>
 
 <h2 id="quiz-name">{{quiz.name}}</h2>
 <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="floppa">
