--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
@@ -1,15 +1,33 @@
-@import '../../../styles/card.scss';
-
 #quiz-img {
     max-width: 166px;
     max-height: 166px;
-    margin-top: 40px;
     border-radius: 54px;
-    display: inline-block;
 }
 
 .answer {
-    max-height: 268px;
     max-width: 470px;
+    max-height: 268px;
+    margin: 10px;
+    object-fit: cover;
+}
+  
+h4 {
+    margin: 0;
+}
+  
+span {
+    margin: 0;
+}
+  
+h3 {
+    margin-top: 40px;
 }
 
+#next-question-button {
+    display: none;
+    margin-top: 10px;
+    width:400px;
+    height: 100px;
+    border-radius:25px;
+    font-size: 32px;
+}
