--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/card.scss';
-
 .edit {
     margin-left: 0.3em;
 }
@@ -42,5 +40,14 @@
 }
 
 #start-quiz-button {
-    border-radius: 10px;
+    border-radius: 25px;
+    width: 354px;
+    height: 75px;
+    font-size: 24px;
+}
+
+#back {
+    margin-top: 10px;
+    max-width: 121px;
+    max-height: 121px;
 }
