--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -22,5 +22,12 @@
     <input type="radio" name="stage" value="stade avance"> Stade avancé (stade 6 à 7) <br>
   </label>
 
+  <label for="photo">
+    Photo :<br>
+    Cliquer sur l'icone pour ajouter une photo
+    <input type="file" id="profil" name="profil" accept="image/png, image/jpeg">
+    <br>
+  </label>
+
   <button type="submit" class="button-card" (click)="addUser()">Create</button>
 </form>
