fix: rename of header texts. #9

--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-    MyApp
+    Floppa Web
 
-    <a class="navigation" [routerLink]="['/quiz-list']">Quiz</a>
-    <a class="navigation" [routerLink]="['/user-list']">Users</a>
+    <a class="navigation" [routerLink]="['/quiz-list']">Editeur de Quiz</a>
+    <a class="navigation" [routerLink]="['/user-list']">Utilisateurs</a>
 </div>
