--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -3,4 +3,5 @@
 
 <h2>{{quiz.name}}</h2>
 <app-question-form [quiz]="quiz"></app-question-form>
+<button routerLink = "">Créer un Quiz [+]</button>
 <app-question-list [quiz]="quiz"></app-question-list>
