--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -17,15 +17,15 @@
   <label for="alzheimerStade">
     Stade Alzheimer : <br>
     Sélectionez une plage <br>
-    <input type="radio" name="stage" value="stade leger"> Stade léger (stade 1 à 2) <br>
-    <input type="radio" name="stage" value="stade intermédiaire"> Stade intermédiaire (stade 3 à 5) <br>
-    <input type="radio" name="stage" value="stade avance"> Stade avancé (stade 6 à 7) <br>
+    <input type="radio" name="stage" value="stade leger" [formControlName]="'alzheimerStade'"> Stade léger (stade 1 à 2) <br>
+    <input type="radio" name="stage" value="stade intermédiaire" [formControlName]="'alzheimerStade'"> Stade intermédiaire (stade 3 à 5) <br>
+    <input type="radio" name="stage" value="stade avance" [formControlName]="'alzheimerStade'"> Stade avancé (stade 6 à 7) <br>
   </label>
 
   <label for="photo">
     Photo :<br>
     Cliquer sur l'icone pour ajouter une photo
-    <input type="file" id="profil" name="profil" accept="image/png, image/jpeg">
+    <input type="file" id="profil" name="profil" accept="image/png, image/jpeg" [formControlName]="'photo'">
     <br>
   </label>
 
