--- a/front-end/src/app/users/user/user.component.html
+++ b/front-end/src/app/users/user/user.component.html
@@ -1,7 +1,11 @@
 <div class="card">
     <h2>
         <i class="fas fa-user"></i>
-        {{user.firstName}} {{user.lastName}} {{user.alzheimerStade}}
+        <img src="{{user.photo}}.value.replace('C:\fakepath\','')" alt="photo d'un utilisateur"/>
+        {{user.firstName}} {{user.lastName}} 
     </h2>
+    <p>{{user.alzheimerStade}}</p>
+    <br>
     <button class="button-card" (click)="delete()">Delete</button>
+    <button class="button-card" (click)="edit()">Edit</button>
 </div>
