task: separation between the user form and the user list in 2 different pages #33

--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -29,5 +29,5 @@
     <br>
   </label>
 
-  <button type="submit" class="button-card" (click)="addUser()">Create</button>
+  <button type="submit" class="button-card" (click)="addUser()" [routerLink]="['/user-list']">Create</button>
 </form>
