--- a/front-end/src/app/questions/question-list/question-list.component.html
+++ b/front-end/src/app/questions/question-list/question-list.component.html
@@ -1,5 +1,5 @@
 <div class="question-list">
     <div class="question" *ngFor="let question of quiz.questions">
-        <app-question [question]="question" (editQuestion)="editQuestion($event)" (deleteQuestion)="deleteQuestion($event)"></app-question>
+        <app-question [question]="question" [quiz] = "quiz" (editQuestion)="editQuestion($event)" (deleteQuestion)="deleteQuestion($event)"></app-question>
     </div>
   </div>
