feat: new association type showing in edit quiz page. #14

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -5,3 +5,4 @@
 <button routerLink = "/question-form/{{this.quiz.id}}" (click)="selectQuiz()">Créer une question à choix [+]</button>
 <button routerLink = "/association-form/{{this.quiz.id}}">Créer une association [+]</button>
 <app-question-list [quiz]="quiz"></app-question-list>
+<app-association-list [quiz]="quiz"></app-association-list>
