feat: setting a first appropriate layout style. #14

--- a/front-end/src/app/questions/question-form/question-form.component.html
+++ b/front-end/src/app/questions/question-form/question-form.component.html
@@ -1,4 +1,4 @@
-
+<button class="back-button" routerLink="/edit-quiz/{{this.quizId}}">Back</button><br>
 <div class="card">
   <h2>Create a new question</h2>
   <form class="quiz-form" [formGroup]="questionForm">
