--- a/front-end/src/styles/variables.scss
+++ b/front-end/src/styles/variables.scss
@@ -1,3 +1,7 @@
 $app-background-color: #f2f2f2;
 $blue: #3f51b5;
+$blue-grey: #d1e2ff;
 $white: white;
+$dark: #333;
+$dark-grey: #666;
+$red: #f87970;
