--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,8 +1,9 @@
-<button class="button-card" routerLink="/quiz-list">Back</button>
+<button class="back-button" routerLink="/quiz-list">Back</button>
 
-
-<h2>{{quiz.name}}</h2>
-<button routerLink = "/question-form/{{this.quiz.id}}" (click)="selectQuiz()">Créer une question à choix [+]</button>
-<button routerLink = "/association-form/{{this.quiz.id}}">Créer une association [+]</button>
+<h1>{{quiz.name}}</h1>
+<h3>Questions à choix :</h3>
+<button class="create-button" routerLink = "/question-form/{{this.quiz.id}}" (click)="selectQuiz()">Créer une question à choix +</button>
 <app-question-list [quiz]="quiz"></app-question-list>
+<h3>Associations :</h3>
+<button class= "create-button" routerLink = "/association-form/{{this.quiz.id}}">Créer une association +</button>
 <app-association-list [quiz]="quiz"></app-association-list>
