--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -2,7 +2,17 @@
 
 .card {
   background: $white;
-  border-radius: 2px;
+  border-radius: 20px;
+  display: inline-block;
+  margin: 1rem;
+  position: relative;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  padding: 0 1em 1em 1em;
+}
+
+.card:hover {
+  background: $blue-grey;
+  border-radius: 20px;
   display: inline-block;
   margin: 1rem;
   position: relative;
@@ -13,6 +23,7 @@
 .button-card {
   background-color: $white;
   border: solid 1px $blue;
+  border-radius: 10px;
   color: $blue;
   font-weight: bold;
   padding: 0.5em 1em;
@@ -20,4 +31,6 @@
 
 .button-card:hover {
   cursor: pointer;
+  background-color: $blue;
+  color: $white;
 }
