--- a/front-end/src/app/associations/association/association.component.html
+++ b/front-end/src/app/associations/association/association.component.html
@@ -4,7 +4,7 @@
         {{association.label}}
     </h2>
     <div class="connection" *ngFor="let connectable of association.toConnect; let i = index">
-        {{i}} - {{connectable.value}} -> {{connectable.correctConnection.value}}<br>
+        {{i}} - {{connectable.value}} -> {{connectable.correctConnection?.value}}<br>
     </div>
     <button class="button-card" (click)="delete()">Delete</button>
 </div>
