--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -60,3 +60,12 @@ body {
   background-color: $dark-grey;
   color: $red;
 }
+
+.input-text {
+  border-radius: 7px; 
+  border-width: 1px;
+  height: 1.5em;
+}
+
+.checkbox {
+}
