task: ajout de la page d'édition d'un utilisateur #40

--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -14,6 +14,14 @@
   </label>
   <br>
 
+  Paramètres de jeu : <br>
+
+  Police d'écriture : <!--normal moyen gros--> <br>
+
+  Indice : <!--oui/non--> <br>
+
+  Synthèse vocale : <!--oui/non--> <br>
+
   <label for="alzheimerStade">
     Stade Alzheimer : <br>
     Sélectionez une plage <br>
