--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
@@ -3,13 +3,6 @@
     max-height: 166px;
     border-radius: 54px;
 }
-
-.answer {
-    max-width: 470px;
-    max-height: 268px;
-    margin: 10px;
-    object-fit: cover;
-}
   
 h4 {
     margin: 0;
@@ -17,10 +10,6 @@ h4 {
   
 span {
     margin: 0;
-}
-  
-h3 {
-    margin-top: 40px;
 }
 
 #next-question-button {
@@ -30,4 +19,21 @@ h3 {
     height: 100px;
     border-radius:25px;
     font-size: 32px;
+}
+
+app-question-choice {
+    width : 100%;
+    height : 70%;
+    align-self: center;
+}
+
+#hint {
+    width: 143px;
+    height: 206px;
+}
+
+#sound-img {
+    max-width: 200px;
+    max-height: 200px;
+    margin-left: 40px;
 }
