implementation of right/wrong answer screen #18#25

--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -15,7 +15,7 @@
             <img id="sound-img" src="/assets/sound.png" alt="sound" (click)="useSound()">
             <h2 id="sound-text">Ecouter la question</h2>
         </div>
-        <span></span> <!--à compléter-->
+        <span></span> <!--à compléter avec user-->
     </div>
     <app-question-choice (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-question-choice>
 </div>
