--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -1,1 +1,15 @@
-<h1>Salut</h1>
+<div style="display: flex; flex-direction: row; margin-top: 20px;">
+    <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
+    <div style="display: flex; flex-direction: column; margin-left: 16px; align-self: flex-start; margin-top: 20px;">
+        <h4>{{quiz.name}}</h4>
+        <span>Question {{numQuestion}}/{{quiz.questions.length}}</span>
+    </div>
+</div>
+<div *ngIf="isCorrect">
+    <span style="color: green">bonne réponse</span>
+</div>
+<div *ngIf="!isCorrect">
+    <span>Mauvaise réponse</span>
+</div>
+<img class="answer" alt="answer-{{correctAnswer+1}}" src="/assets/quiz-{{quiz.id}}/question-{{numQuestion}}/img-{{correctAnswer+1}}.jpg">
+<button id="next-question-button" (click)="nextQuestion()">Question Suivante</button>
