--- a/front-end/src/app/answer/answer.component.scss
+++ b/front-end/src/app/answer/answer.component.scss
@@ -11,3 +11,16 @@
     border-radius:25px;
     font-size: 32px;
 }
+
+.answer-text {
+    display: flex;
+    justify-content: center;
+}
+
+#answer-img {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
