--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: column;">
     <div style="display: flex; align-items: center; margin-top:20px; justify-content: space-between;">
-        <div>
+        <div style="display:flex; flex-direction: row;">
             <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
             <div style="display: flex; flex-direction: column; margin-left: 16px; align-self: flex-start; margin-top: 20px;">
                 <h4>{{quiz.name}}</h4>
@@ -15,7 +15,7 @@
             <img id="sound-img" src="/assets/sound.png" alt="sound" (click)="useSound()">
             <h2 id="sound-text">Ecouter la question</h2>
         </div>
-        <span></span> <!--à compléter avec user-->
+        <h3>Utilisateur</h3> <!--à compléter avec user-->
     </div>
     <app-question-choice (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-question-choice>
 </div>
