task: ajout de mock d'une liste de patient #33

--- a/front-end/src/app/users/user-edit/user-edit.component.html
+++ b/front-end/src/app/users/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<form class="user-form" [formGroup]="userForm">
+<form class="user-edit" [formGroup]="userEdit" (ngSubmit)="edit(userEdit.value)" method="post" action="#">
     <label for="firstName">
       Prénom : 
       <input class="input-custom" type="text" id="firstName" [formControlName]="'firstName'">
@@ -14,9 +14,9 @@
     <label for="alzheimerStade">
       Stade Alzheimer : <br>
       Sélectionez une plage <br>
-      <input type="radio" name="stage" value="stade leger" [formControlName]="'alzheimerStade'"> Stade léger (stade 1 à 2) <br>
-      <input type="radio" name="stage" value="stade intermédiaire" [formControlName]="'alzheimerStade'"> Stade intermédiaire (stade 3 à 5) <br>
-      <input type="radio" name="stage" value="stade avance" [formControlName]="'alzheimerStade'"> Stade avancé (stade 6 à 7) <br>
+      <input type="radio" name="alzheimerStade" value="stade leger" [formControlName]="'alzheimerStade'"> Stade léger (stade 1 à 2) <br>
+      <input type="radio" name="alzheimerStade" value="stade intermédiaire" [formControlName]="'alzheimerStade'"> Stade intermédiaire (stade 3 à 5) <br>
+      <input type="radio" name="alzheimerStade" value="stade avance" [formControlName]="'alzheimerStade'"> Stade avancé (stade 6 à 7) <br>
     </label>
   
     <label for="photo">
@@ -25,6 +25,6 @@
       <input type="file" id="profil" name="profil" accept="image/png, image/jpeg" [formControlName]="'photo'">
       <br>
     </label>
-  
-    <button type="submit" class="button-card" (click)="edit(this.user)" [routerLink]="['/user-list']">Valider</button>
+
+    <button type="submit" class="button-card" [routerLink]="['/user-list']">Valider</button>
   </form>
