task: details of the display of pages #33

--- a/front-end/src/app/users/user-edit/user-edit.component.html
+++ b/front-end/src/app/users/user-edit/user-edit.component.html
@@ -1,3 +1,4 @@
+<img id="back" src="/assets/back.png" alt="back" (click)="goBack()">
 <form class="user-edit" [formGroup]="userEdit" (ngSubmit)="edit(userEdit.value)" method="post" action="#">
     <label for="firstName">
       Prénom : 
