--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-
+<img id="back" src="/assets/back.png" alt="back" (click)="goBack()">
 <h2>Nouvel utilisateur</h2>
 
 <form class="user-form" [formGroup]="userForm">
