--- a/front-end/src/app/users/user-list/user-list.component.html
+++ b/front-end/src/app/users/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 
 <h1>Sélectionner un patient</h1>
-<button class="form" [routerLink]="['/user-form']">Ajouter un patient dans la liste</button>
+<button id="addUser" class="form" [routerLink]="['/user-form']">Ajouter un patient dans la liste</button>
 <div class="user-list">
     <div class="user" *ngFor="let user of userList">
         <app-user [user]="user" (deleteUser)="deleteUser($event)"></app-user>
