implementation of assistances according to the user #18#25

--- a/front-end/src/app/answer/answer.component.scss
+++ b/front-end/src/app/answer/answer.component.scss
@@ -12,6 +12,12 @@
     font-size: 32px;
 }
 
+#next-question-button:hover {
+    background-color: grey;
+    color: white;
+}
+
+
 .answer-text {
     display: flex;
     justify-content: center;
