--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
@@ -3,4 +3,4 @@
 <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
 <h2 id="quiz-name">{{quiz.name}}</h2>
 <span id="nb-of-question">{{quiz.questions.length}} questions</span>
-<button id="start-quiz-button" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{stage}}">Démarrer le quiz</button>
+<button id="start-quiz-button" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{assistance}}">Démarrer le quiz</button>
