--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -9,7 +9,7 @@
     
     <h3 style="display:flex; align-self: center; float: right; margin-right: 30px;">Utilisateur</h3>
 </div>
-<div *ngIf="stage === 0">
+<div *ngIf="assistance === 1000">
     <div class="answer-text" *ngIf="isCorrect">
         <h1 style="color: rgb(16, 206, 16)">Bonne réponse !</h1>
     </div>
@@ -18,13 +18,13 @@
     </div>
 </div>
 
-<div *ngIf="stage>0">
+<div *ngIf="assistance > 1000">
     <h1 class="answer-text">La bonne réponse est :</h1>
 </div>
 <div style="display:flex; justify-content: center;">
     <img id="answer-img" alt="answer-{{correctAnswer+1}}" src="/assets/quiz-{{quiz.id}}/question-{{numQuestion}}/img-{{correctAnswer+1}}.jpg">
 </div>
-<div *ngIf="isCorrect && stage>0" style="display: flex; justify-content: center;">
+<div *ngIf="isCorrect && assistance > 1000" style="display: flex; justify-content: center;">
     <h1 style="color: rgb(16, 206, 16)" class="answer-text">Bravo !</h1>
 </div>
 <div style="display: flex; justify-content: center;">
