--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     Floppa Web
 
-    <a class="navigation" [routerLink]="['/quiz-list']">Editeur de Quiz</a>
+    <a class="navigation" [routerLink]="['/quiz-list/Madeleine-Duo']">Editeur de Quiz</a>
     <a class="navigation" [routerLink]="['/user-list']">Utilisateurs</a>
 </div>
