--- a/front-end/src/app/quizzes/quiz/quiz.component.html
+++ b/front-end/src/app/quizzes/quiz/quiz.component.html
@@ -9,7 +9,7 @@
     <span>
         {{quiz.questions.length}}
     </span>
-    <button class="button-card" routerLink="/start-quiz/{{quiz.id}}">Jouer</button>
+    <button class="button-card" routerLink="/start-quiz/{{quiz.id}}/{{user.assistance}}">Jouer</button>
     <button class="button-card" (click)="delete()">Supprimer</button>
     <button class="button-card edit" routerLink="/edit-quiz/{{quiz.id}}">Edit</button>
 </div>
