--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -4,7 +4,7 @@
             <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
             <div style="display: flex; flex-direction: column; margin-left: 16px; align-self: flex-start; margin-top: 20px;">
                 <h4>{{quiz.name}}</h4>
-                <span>Question {{numQuestion}}/{{quiz.questions.length}}</span>
+                <span>Question {{numQuestion}}/{{quiz.questions.length + quiz.associations.length}}</span>
             </div>
         </div>
         <div *ngIf="assistance % 10 >= 1" style="align-self: center;">
@@ -17,6 +17,7 @@
         </div>
         <h3>Utilisateur</h3> <!--à compléter avec user-->
     </div>
-    <app-question-choice (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-question-choice>
+    <app-play-association></app-play-association>
+    <!--<app-play-question (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-play-question>-->
 </div>
   
