--- a/front-end/src/app/questions/question-choice/question-choice.component.scss
+++ b/front-end/src/app/questions/question-choice/question-choice.component.scss
@@ -11,3 +11,8 @@ h1 {
     margin-right: 100px;
     margin-top: 50px;
 }
+
+.correct-answer {
+    box-shadow: 0px 0px 10px green;
+    border-radius: 5%;
+}
