--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -17,6 +17,6 @@
         </div>
         <h3>Utilisateur</h3> <!--à compléter avec user-->
     </div>
-    <app-question-choice (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-question-choice>
+    <app-question-choice (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion" [assistance]="assistance"></app-question-choice>
 </div>
   
