feat: switch to screen answer when checking association answer. #13

--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -21,6 +21,6 @@
     left:50%;
     width:100px;
     bottom:0px;">
-        <Button style= "position:absolute; width:100px; height:50px " class = "button" (click)="check()">Check</Button>
+        <Button style= "position:absolute; width:100px; height:50px" (click)="check()">Check</Button>
     </div>
 </div>
