--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -17,7 +17,7 @@
         </div>
         <h3>Utilisateur</h3> <!--à compléter avec user-->
     </div>
-    <app-play-association></app-play-association>
+    <app-play-association (answer)="checkAssociation()"></app-play-association>
     <!--<app-play-question (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion"></app-play-question>-->
 </div>
   
