--- a/front-end/src/app/quizzes/final-screen/final-screen.component.html
+++ b/front-end/src/app/quizzes/final-screen/final-screen.component.html
@@ -8,7 +8,7 @@
 <div id="result" style="align-items: center;">
     <h1>Félicitations</h1>
     <h2>vous avez terminé le quiz !</h2>
-    <h2>Vous avez réussi : {{score}}/{{quiz.questions.length}} questions</h2>
+    <h2>Vous avez réussi : {{score}}/{{quiz.questions.length + quiz.associations.length}} questions</h2>
 </div>
 
 <div id="goHome">
