quiz selector screen #3

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,4 +1,4 @@
-<button class="back-button" routerLink="/quiz-list/Madeleine-Duo">Retour</button>
+<button class="back-button" routerLink="/quiz-list/Madeleine-Duo/{{this.theme}}">Retour</button>
 
 <h1>{{quiz.name}}</h1>
 <h3>Questions à choix :</h3>
