--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -3,3 +3,16 @@
 * {
     margin-left: 0.3em;
 }
+
+img {
+    width: 285px;
+    height: 285px;
+    border-radius: 44px;
+    justify-content: center;
+}
+
+.quiz {
+    margin-right: 150px;
+    margin-left: 150px;
+    margin-bottom: 100px;
+}
