feat: association line showing when creating associatoins in game. #13

--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -18,6 +18,10 @@
                 </Button>
             </div>
         </div>
-        <!--<app-connection></app-connection>-->
+        <div *ngIf="currentConnections.length > 0">
+            <div *ngFor="let connection of this.currentConnections; let i = index;">
+                <app-connection [id] = "i" [connection]="connection" [shuffledValuesToConnect] = "this.shuffledValuesToConnect" [shuffledValuesToBeConnected] = "this.shuffledValuesToBeConnected"></app-connection>
+            </div>
+        </div>
     </div>
 </div>
